--- a/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
@@ -6,8 +6,7 @@
                 <h3>All Wells</h3>
                 <ag-grid-angular #geooptixWellsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
                     [rowData]="wells" [columnDefs]="columnDefs" [pagination]="true" [rowSelection]="'single'"
-                    [paginationPageSize]="100" 
-                    (selectionChanged)="onSelectionChanged($event)"
+                    [paginationPageSize]="100" (selectionChanged)="onSelectionChanged($event)"
                     (gridReady)="onGridReady($event)">
                 </ag-grid-angular>
             </div>
@@ -15,10 +14,11 @@
                 <div class="row mt-2" *ngIf="activeWell">
                     <div class="col">
                         <h3>Selected Well</h3>
-                        <p>
+                        <p class="mb-1">
                             <a routerLink="/wells/{{activeWell.RegCD}}">View Details</a>
                         </p>
-                        <dl style="max-height: 300px; overflow-y:scroll; overflow-x:hidden;">
+                        <dl style="max-height: 300px; overflow-y:scroll; overflow-x:hidden;"
+                            *ngIf="!activeWell.arcError">
                             <dt>FID:</dt>
                             <dd>{{activeWell.FID| placeholder: "Not provided"}}</dd>
                             <dt>OBJECTID:</dt>
@@ -118,8 +118,10 @@
                             <dt>tpid:</dt>
                             <dd>{{activeWell.tpid| placeholder: "Not provided"}}</dd>
                         </dl>
-                        <br/>
-                        <button type="button" class="btn btn-zybach" (click)="clearSelection($event)"><i class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button>
+                        <em *ngIf="activeWell.arcError">The well was not found in the GIS layer.</em>
+
+                        <button type="button" class="btn btn-zybach mt-2" (click)="clearSelection($event)"><i
+                                class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button>
                     </div>
                 </div>
             </ng-container>
