--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -88,8 +88,8 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-4">
-            <div class="col">
+        <div class="row mt-4 mb-4">
+            <!-- <div class="col">
                 <div class="card">
                     <div class="card-header">
 
@@ -98,8 +98,8 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col">
+            </div> -->
+            <div class="col-6">
                 <div class="card">
                     <div class="card-header">
                         External Resources
