fix a target = _blank

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -179,7 +179,7 @@
                             </a>
                         </p>
                         <p class="m-0" *ngIf="sensorCanonicalName">
-                            <a _target="blank" [href]="sensorInGeoOptixUrl()">
+                            <a _target="_blank" [href]="sensorInGeoOptixUrl()">
                                 View sensor details in GeoOptix <i class="fas fa-external-link-alt ml-1"></i>
                             </a>
                         </p>
