Move view details link on map explorer to below ArcGIS details Improve link texts on well-details page

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -175,12 +175,12 @@
                     <div class="card-body">
                         <p class="m-0" *ngIf="well">
                             <a target="_blank" href="{{wellInGeoOptixUrl()}}">
-                                View Well in GeoOptix <i class="fas fa-external-link-alt ml-1"></i>
+                                View Well Details in GeoOptix <i class="fas fa-external-link-alt ml-1"></i>
                             </a>
                         </p>
                         <p class="m-0" *ngIf="sensorCanonicalName">
-                            <a _target="_blank" [href]="sensorInGeoOptixUrl()">
-                                View sensor details in GeoOptix <i class="fas fa-external-link-alt ml-1"></i>
+                            <a target="_blank" [href]="sensorInGeoOptixUrl()">
+                                View Sensor Details in GeoOptix <i class="fas fa-external-link-alt ml-1"></i>
                             </a>
                         </p>
                         <p class="m-0" *ngIf="wellFromArc">
