--- a/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
@@ -14,9 +14,6 @@
                 <div class="row mt-2" *ngIf="activeWell">
                     <div class="col">
                         <h3>Selected Well</h3>
-                        <p class="mb-1">
-                            <a routerLink="/wells/{{activeWell.RegCD}}">View Details</a>
-                        </p>
                         <dl style="max-height: 300px; overflow-y:scroll; overflow-x:hidden;"
                             *ngIf="!activeWell.arcError">
                             <dt>FID:</dt>
@@ -122,6 +119,7 @@
 
                         <button type="button" class="btn btn-zybach mt-2" (click)="clearSelection($event)"><i
                                 class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button>
+                        <a class="btn btn-zybach mt-2 ml-2" routerLink="/wells/{{activeWell.RegCD}}">View Details <i class="ml-1 fas fa-eye"></i></a>
                     </div>
                 </div>
             </ng-container>
