Remove an unneeded release script Update some images

--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col no-gutters text-center">
                 <a href="https://tpnrd.org/" alt="" target="_blank">
-                    <img src="assets/main/logos/logo.png" style="height: 75px;">
+                    <img src="assets/main/logos/logo-small.png" style="height: 75px;">
                 </a>
             </div>
             <div class="col no-gutters text-center">
