--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -4,7 +4,7 @@
             <div class="col-12">
                 <nav class="navbar navbar-zybach navbar-expand-lg navbar-dark stroke nav-fill">
                     <a href="https://tpnrd.org/" class="navbar-brand">
-                        <img src="assets/main/logos/{{leadOrganizationLogoFilename()}}" class="navbarLogo">
+                        <img src="assets/main/logos/logo-small.png" class="navbarLogo">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
