* Add config entries for the NE DNR well inventory url and the geooptix web url * Update the UI on the map explorer * Add sensor name column to the grid

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -184,7 +184,7 @@
                             </a>
                         </p>
                         <p class="m-0" *ngIf="wellFromArc">
-                            <a target="_blank" [href]="wellPropertiesFromArc.Hyperlink">
+                            <a target="_blank" [href]="nednrUrl()">
                                 View in Nebraska DNR GIS<i class="fas fa-external-link-alt ml-1"></i>
                             </a>
                         </p>
