--- a/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
@@ -2,8 +2,8 @@
 
     <div class="col-lg-3 pl-2 pr-2 ">
         <div class="container-lg d-inline d-lg-flex flex-column min-vh-100">
-            <div class="row mt-2" *ngIf="!activeWell">
-                <h3>All Wells</h3>
+            <div class="row mt-2">
+                <h3>Wells in GeoOptix</h3>
                 <ag-grid-angular #geooptixWellsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
                     [rowData]="wells" [columnDefs]="columnDefs" [pagination]="true" [rowSelection]="'single'"
                     [paginationPageSize]="100" (selectionChanged)="onSelectionChanged($event)"
@@ -14,7 +14,7 @@
                 <div class="row mt-2" *ngIf="activeWell">
                     <div class="col">
                         <h3>Selected Well</h3>
-                        <dl style="max-height: 300px; overflow-y:scroll; overflow-x:hidden; font-size: 14px;"
+                        <dl style="max-height: 215px; overflow-y:scroll; overflow-x:hidden; font-size: 14px;"
                             *ngIf="!activeWell.arcError">
                             <dt>Object ID:</dt>
                             <dd>{{activeWell.ObjectId | placeholder: "Not provided"}}</dd>
@@ -66,14 +66,20 @@
                             <dd>{{activeWell.Latitude| placeholder: "Not provided"}}</dd>
                             <dt>Longitude:</dt>
                             <dd>{{activeWell.Longitude| placeholder: "Not provided"}}</dd>
+                            <dt>Hyperlink:</dt>
+                            <dd><a [href]="nednrUrl()" target="_blank">View in Nebraska DNR GIS</a></dd>
                         </dl>
                         <em *ngIf="activeWell.arcError">The well was not found in the GIS layer.</em>
-
+<!-- 
                         <button type="button" class="btn btn-zybach mt-2" (click)="clearSelection($event)"><i
-                                class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button>
-                        <a class="btn btn-zybach mt-2 ml-2" routerLink="/wells/{{activeWell.RegistrationNumber}}">View Details <i class="ml-1 fas fa-eye"></i></a>
+                                class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button> -->
+                        <a class="btn btn-zybach mt-2" routerLink="/wells/{{activeWell.RegistrationNumber}}">View Details <i class="ml-1 fas fa-eye"></i></a>
                     </div>
                 </div>
+            </ng-container>
+            <ng-container *ngIf="!activeWell">
+                <br/>
+                <em>Use the map or grid to select a well.</em>
             </ng-container>
         </div>
     </div>
