--- a/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-3 pl-2 pr-2 ">
         <div class="container-lg d-inline d-lg-flex flex-column min-vh-100">
             <div class="row mt-2">
-                <h3>Wells in GeoOptix</h3>
+                <h3>Monitored Wells</h3>
                 <ag-grid-angular #geooptixWellsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
                     [rowData]="wells" [columnDefs]="columnDefs" [pagination]="true" [rowSelection]="'single'"
                     [paginationPageSize]="100" (selectionChanged)="onSelectionChanged($event)"
