--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -197,6 +197,18 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-4 mb-4" *ngIf="photoDataUrls.length">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        Photos
+                    </div>
+                    <div class="card-body">
+                        <img *ngFor="let photoDataUrl of photoDataUrls" [src]="photoDataUrl"/>
+                    </div>
+                </div>
+            </div>
+        </div>
     </ng-container>
 </div>
 
