Fix images that were "overflowing" the photo panel boundary

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -204,7 +204,7 @@
                         Photos
                     </div>
                     <div class="card-body">
-                        <img *ngFor="let photoDataUrl of photoDataUrls" [src]="photoDataUrl"/>
+                        <img *ngFor="let photoDataUrl of photoDataUrls" [src]="photoDataUrl" style="width:100%;" />
                     </div>
                 </div>
             </div>
