--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -201,7 +201,7 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        Photos
+                        Photo
                     </div>
                     <div class="card-body">
                         <img *ngFor="let photoDataUrl of photoDataUrls" [src]="photoDataUrl" style="width:100%;" />
