Show the view-time-series button even if there's no data--just disable it helpfully

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -21,8 +21,10 @@
                 </h2>
             </div>
             <div class="col text-right">
-                <button type="button" *ngIf="timeSeriesData" class="btn btn-zybach mr-2"
-                    (click)="openTimeSeriesExplorer()">Open Time Series Viewer</button>
+                <button type="button" [disabled]="!timeSeriesData" class="btn btn-zybach mr-2"
+                    (click)="openTimeSeriesExplorer()" [title]="viewDataTitleMessage()"
+                    [ngClass]="{'time-series-disabled': !timeSeriesData}"
+                    >Open Time Series Viewer</button>
 
             </div>
         </div>
