--- a/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.html
@@ -1,20 +1,23 @@
 <div class="row ml-0 mr-0">
 
-    <div class="col-lg-3 pl-2 pr-2 ">
+    <div class="col-lg-4 pl-2 pr-2 ">
         <div class="container-lg d-inline d-lg-flex flex-column min-vh-100">
-            <div class="row mt-2">
-                <h3>Monitored Wells</h3>
-                <ag-grid-angular #geooptixWellsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
-                    [rowData]="wells" [columnDefs]="columnDefs" [pagination]="true" [rowSelection]="'single'"
-                    [paginationPageSize]="100" (selectionChanged)="onSelectionChanged($event)"
-                    (gridReady)="onGridReady($event)">
-                </ag-grid-angular>
+            <div class="row mt-2" *ngIf="!activeWell">
+                <div class="col">
+                    <h3>Monitored Wells</h3>
+                    <ag-grid-angular #geooptixWellsGrid style="width: 100%; height: 500px;" class="ag-theme-balham"
+                        [rowData]="wells" [columnDefs]="columnDefs" [pagination]="true" [rowSelection]="'single'"
+                        [paginationPageSize]="100" (selectionChanged)="onSelectionChanged($event)"
+                        (gridReady)="onGridReady($event)">
+                    </ag-grid-angular>
+                </div>
             </div>
             <ng-container *ngIf="activeWell">
                 <div class="row mt-2" *ngIf="activeWell">
                     <div class="col">
                         <h3>Selected Well</h3>
-                        <dl style="max-height: 215px; overflow-y:scroll; overflow-x:hidden; font-size: 14px;"
+                        <!--max-height: 215px; overflow-y:scroll; overflow-x:hidden; -->
+                        <dl style="font-size: 15px;"
                             *ngIf="!activeWell.arcError">
                             <dt>Object ID:</dt>
                             <dd>{{activeWell.ObjectId | placeholder: "Not provided"}}</dd>
@@ -70,21 +73,22 @@
                             <dd><a [href]="nednrUrl()" target="_blank">View in Nebraska DNR GIS</a></dd>
                         </dl>
                         <em *ngIf="activeWell.arcError">The well was not found in the GIS layer.</em>
-<!-- 
+                        
                         <button type="button" class="btn btn-zybach mt-2" (click)="clearSelection($event)"><i
-                                class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button> -->
-                        <a class="btn btn-zybach mt-2" routerLink="/wells/{{activeWell.RegistrationNumber}}">View Details <i class="ml-1 fas fa-eye"></i></a>
+                                class="fas fa-long-arrow-alt-left mr-1"></i>View all wells</button>
+                        <a class="btn btn-zybach ml-2 mt-2" routerLink="/wells/{{activeWell.RegistrationNumber}}">View
+                            Details <i class="ml-1 fas fa-eye"></i></a>
                     </div>
                 </div>
             </ng-container>
             <ng-container *ngIf="!activeWell">
-                <br/>
+                <br />
                 <em>Use the map or grid to select a well.</em>
             </ng-container>
         </div>
     </div>
 
-    <div class="col-lg-9 pl-0 pr-0">
+    <div class="col-lg-8 pl-0 pr-0">
         <div #mapDiv id={{mapID}} class="location-card" [style.min-height]="mapHeight" style="height:100%">
             <button *ngIf="searchActive" (click)="displayTraceOrZoomToNeighborhood($event)" class="btn btn-zybach"
                 style="position:absolute; bottom:10px; right:10px; z-index:100000">{{traceActive ? "Zoom to my Neighborhood" : "Where does my water go?"}}</button>
