User edit and role-based authentication implemented

--- a/Source/Fresca.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Fresca.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -11,17 +11,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
+            <!-- <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     View
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a routerLink="/watersheds" class="dropdown-item">
-                        Watersheds
-                    </a>
-                </div>
-            </li>
+            </li> -->
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
