--- a/Source/Fresca.Web/src/app/pages/user-edit/user-edit.component.html
+++ b/Source/Fresca.Web/src/app/pages/user-edit/user-edit.component.html
@@ -23,9 +23,9 @@
           <label class="required">Role</label>
         </div>
         <div class="col-sm-10">
-          <select name="RoleID" class="form-control" [(ngModel)]="model.RoleID" (change)="checkReceiveSupportEmails()" required>
+          <select name="RoleID" class="form-control" [(ngModel)]="model.Role" (change)="checkReceiveSupportEmails()" required>
             <option value=""></option>
-            <option *ngFor="let role of roles" [value]="role.RoleID">
+            <option *ngFor="let role of roles" [value]="role.RoleName">
               {{role.RoleDisplayName}}
             </option>
           </select>
