Hide invite user button and add test-api.componenet

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -29,6 +29,9 @@
                     <a routerLink="/labels-and-definitions" class="dropdown-item">
                         Labels and Definitions
                     </a>
+                    <a routerLink="/test-api" class="dropdown-item">
+                        Test API
+                    </a>
                 </div>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active">
